melhorando as coisas aos poucos..

--- a/Loja-WEB/web/paginas/cumun.xhtml
+++ b/Loja-WEB/web/paginas/cumun.xhtml
@@ -10,7 +10,7 @@
         <link href="./../resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/loja.css" rel="stylesheet" type="text/css" />
-        <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css" />
+<!--        <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css" />-->
         <script language="text/javascript" src="./../resources/js/loja.js" type="text/javascript" />
 
         <title>SR-Malhas</title>
