--- a/Loja-WEB/web/index.xhtml
+++ b/Loja-WEB/web/index.xhtml
@@ -4,12 +4,12 @@
       xmlns:p="http://primefaces.prime.com.tr/ui"
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <script type="text/javascript">
+            document.location = 'paginas/index.xhtml';
+        </script>
     </h:head>
     <h:body>
-
-
-
+        err... espera ae manolo :P
     </h:body>
 </html>
 
