--- a/Loja-WEB/web/paginas/comun.xhtml
+++ b/Loja-WEB/web/paginas/comun.xhtml
@@ -13,7 +13,7 @@
         <link href="./../resources/css/css3buttons.css" rel="stylesheet" type="text/css" />
 <!--        <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css" />-->
         <script language="text/javascript" src="./../resources/js/loja.js" type="text/javascript" />
-        <script language="text/javascript" src="./../resources/js/jquery-1.6.1.min.js" type="text/javascript" />
+<!--        <script language="text/javascript" src="./../resources/js/jquery-1.6.1.min.js" type="text/javascript" /> jqueryUI da pau com ele.-->
 
         <title>SR-Malhas</title>
 
