--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -22,23 +22,30 @@
                 <p:calendar value="#{managedProduto.produto.dataVencimentoOferta}" label="Data vencimento oferta" styleClass="campo-data" />
                 <h:outputText value="Categorias" />
                 <h:panelGroup>
+                    
                     <p:dialog header="Cadastrar categoria" widgetVar="dlgCategoria" 
                               showEffect="explode" hideEffect="explode" height="150"
                               modal="true" onCloseUpdate=":cadastro">
-
-                        <ui:include src="./cadastroCategoriaEmbed.xhtml" /> 
+                        <h:panelGrid columns="2" id="dialogCategoria">
+                            <h:outputText value="Nome" />
+                            <p:inputText value="#{managedCategoria.categoria.descricao}" />
+                        </h:panelGrid>
+                        <p:spacer height="10px" />
+                        <p:commandButton value="Salvar" action="#{managedCategoria.salvar}" update="dialogCategoria" image="ui-icon-disk" />
+                        <p:commandButton value="Novo" action="#{managedCategoria.novo}" update="dialogCategoria" image="ui-icon-new" />
                     </p:dialog>
+                    
                     <p:selectManyMenu value="#{managedProduto.produto.categorias}" label="Categorias" styleClass="campo-many-menu" >
                         <f:converter converterId="categoriaConverter" />
                         <f:selectItems value="#{managedProduto.categorias}" 
                                        var="item" itemLabel="#{item.descricao}" itemValue="#{item}"/>
-                </p:selectManyMenu>
-                <p:commandLink value="Nova categoria" oncomplete="dlgCategoria.show();" />
-            </h:panelGroup>
-        </h:panelGrid>
-        <p:commandButton action="#{managedProduto.salvar}" update=":cadastro" value="Salvar" image="ui-icon-disk" />
-        <p:commandButton action="#{managedProduto.novo}" update=":cadastro" value="Novo" image="ui-icon-new" />
-    </h:form>
-</ui:define>
+                    </p:selectManyMenu>
+                    <p:commandLink value="Nova categoria" oncomplete="dlgCategoria.show();" />
+                </h:panelGroup>
+            </h:panelGrid>
+            <p:commandButton action="#{managedProduto.salvar}" update=":cadastro" value="Salvar" image="ui-icon-disk" />
+            <p:commandButton action="#{managedProduto.novo}" update=":cadastro" value="Novo" image="ui-icon-new" />
+        </h:form>
+    </ui:define>
 
 </ui:composition>
