--- a/Loja-WEB/web/paginas/index.xhtml
+++ b/Loja-WEB/web/paginas/index.xhtml
@@ -14,7 +14,7 @@
             <h:panelGrid columns="1" style="height: 300px;" cellpadding="4  ">
 
                 <h:outputText value="Nome:  #{prod.nome}" />
-                <h:outputText value="Descrição: #{prod.descricao}" />                    
+                <h:graphicImage value="#{prod.imagem}" width="200" height="200" />         
 
             </h:panelGrid>
         </p:carousel>
