--- a/Loja-WEB/web/paginas/comun.xhtml
+++ b/Loja-WEB/web/paginas/comun.xhtml
@@ -17,6 +17,7 @@
         <script language="text/javascript" src="./../resources/js/loja.js" type="text/javascript" />
         <!--        <script language="text/javascript" src="./../resources/js/jquery-1.6.1.min.js" type="text/javascript" /> jqueryUI da pau com ele.-->
 
+        
         <title>SR-Malhas</title>
 
         <meta http-equiv="content-type"
@@ -56,10 +57,7 @@
                         
                         <h:outputText escape="false" value="&lt;h1&gt;Menu&lt;/h1&gt; &lt;hr /&gt;" />
                         <h:panelGrid columns="1">
-                            <p:commandLink value="Busca" oncomplete="document.location = 'listaProdutos.xhtml';" />
-                            <p:commandLink value="Busca" oncomplete="document.location = 'listaProdutos.xhtml';" />
-                            <p:commandLink value="Busca" oncomplete="document.location = 'listaProdutos.xhtml';" />
-                            <p:commandLink value="Busca" oncomplete="document.location = 'listaProdutos.xhtml';" />
+                            <p:commandLink value="Início" oncomplete="document.location = 'index.xhtml';" />
                             <p:commandLink value="Busca" oncomplete="document.location = 'listaProdutos.xhtml';" />
                         </h:panelGrid>
 
@@ -75,7 +73,7 @@
                                 <p:panel header="#{produto.nome}" style="text-align:center">  
                                     <h:panelGrid columns="1" style="width:100%">  
 
-                                        <h:outputText value="#{produto.descricao}" />  
+                                        <h:graphicImage value="#{produto.imagem}" width="100" height="100" />    
 
                                         <p:commandLink update=":carrinho" action="#{managedCarrinho.removerDoCarrinho}" value="Remover">  
                                             <f:setPropertyActionListener value="#{produto.id}"   
