--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -67,6 +67,7 @@
             </h:panelGrid>
 
             <p:commandButton action="#{managedProduto.salvar}" update=":cadastro" value="Salvar" image="ui-icon-disk" />
+            <p:commandButton action="#{managedProduto.excluir}" update=":cadastro" value="Excluir" image="ui-icon-trash" />
             <p:commandButton action="#{managedProduto.novo}" update=":cadastro" value="Novo" image="ui-icon-new" />
         </h:form>
     </ui:define>
