--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -55,7 +55,7 @@
                     <h:panelGrid columns="2" 
                                  title="Você pode arrastar uma imagem do seu computador e soltar sobre o botão, ou clicar no botão e escolher uma. Para substituir a imagem atual, simplesmente escolha outra. Use preferencialmente imagens nas proporções 1x1 (quadrado).">
                         <p:fileUpload fileUploadListener="#{managedProduto.handleFileUpload}"  
-                                      update="panelUpload"
+                                      update=":cadastro"
                                       auto="true"
                                       label="Escolher imagem"
                                       multiple="false" 
