--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -78,9 +78,12 @@
 
             </h:panelGrid>
 
-            <p:commandButton action="#{managedProduto.salvar}" update=":cadastro" value="Salvar" image="ui-icon-disk" />
-            <p:commandButton action="#{managedProduto.excluir}" update=":cadastro" value="Excluir" image="ui-icon-trash" />
-            <p:commandButton action="#{managedProduto.novo}" update=":cadastro" value="Novo" image="ui-icon-new" />
+            <p:commandButton title="Salvar produto." action="#{managedProduto.salvar}" 
+                             update=":cadastro" value="Salvar" image="ui-icon-disk" />
+            <p:commandButton title="Excluir produto." action="#{managedProduto.excluir}" 
+                             update=":cadastro" value="Excluir" image="ui-icon-trash" />
+            <p:commandButton title="Cadastrar um novo produto." action="#{managedProduto.novo}" 
+                             update=":cadastro" value="Novo" image="ui-icon-new" />
         </h:form>
     </ui:define>
 
