--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -6,6 +6,9 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core">
 
+    <ui:define name="titulo">Cadastro de Produtos</ui:define>
+    <ui:define name="subtitulo"></ui:define>
+    
     <ui:define name="content">
         <h:form id="cadastro">
             <p:growl id="mensagens" showDetail="true" sticky="false" autoUpdate="true" showSummary="true" />
@@ -55,7 +58,7 @@
                     <h:panelGrid columns="2" 
                                  title="Você pode arrastar uma imagem do seu computador e soltar sobre o botão, ou clicar no botão e escolher uma. Para substituir a imagem atual, simplesmente escolha outra. Use preferencialmente imagens nas proporções 1x1 (quadrado).">
                         <p:fileUpload fileUploadListener="#{managedProduto.handleFileUpload}"  
-                                      update=":cadastro"
+                                      update=":panelUpload"
                                       auto="true"
                                       label="Escolher imagem"
                                       multiple="false" 
