terminando melhorias no CRUD categorias.

--- a/Loja-WEB/web/paginas/cadastrarCategoria.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarCategoria.xhtml
@@ -4,7 +4,8 @@
                 template="./comun.xhtml"
                 xmlns:p="http://primefaces.prime.com.tr/ui"
                 xmlns:h="http://java.sun.com/jsf/html">
-
+    <ui:define name="titulo">Cadastro de Categorias</ui:define>
+    <ui:define name="subtitulo"></ui:define>
     <ui:define name="content">
         <h:form id="cadastroCategoriaCompleto">
             <h:panelGrid columns="1">
