--- a/Loja-WEB/web/paginas/listaCategorias.xhtml
+++ b/Loja-WEB/web/paginas/listaCategorias.xhtml
@@ -26,7 +26,7 @@
                     <p:spacer width="30px" />
                     <h:outputText value="Outras ações: " />
                     <p:commandButton action="#{managedCategoria.novo}" image="ui-icon-document" title="Nova categoria"
-                                     oncomplete="window.location = 'cadastrarCategoria.xhtml'" >
+                                     oncomplete="Loja.gotopagina(Loja.Paginas.CAD_CATEGORIA)" >
                     </p:commandButton>
                 </h:panelGrid>
             </h:panelGroup>
@@ -46,7 +46,7 @@
                     <h:outputText value="Ações com esta categoria: " />
                     <p:spacer width="5px" />
                     <p:commandButton action="#{managedCategoria.load}" image="ui-icon-pencil" title="Editar"
-                                     oncomplete="window.location = 'cadastrarCategoria.xhtml'" >
+                                     oncomplete="Loja.gotopagina(Loja.Paginas.CAD_CATEGORIA)" >
                         <f:setPropertyActionListener target="#{managedCategoria.idSelecionado}" 
                                                      value="#{categoria.id}" />
                     </p:commandButton>
