--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -11,7 +11,6 @@
     
     <ui:define name="content">
         <h:form id="cadastro">
-            <p:growl id="mensagens" showDetail="true" sticky="false" autoUpdate="true" showSummary="true" />
             <h:panelGrid columns="2">
 
                 <h:outputText value="Nome"/> 
@@ -58,13 +57,13 @@
                     <h:panelGrid columns="2" 
                                  title="Você pode arrastar uma imagem do seu computador e soltar sobre o botão, ou clicar no botão e escolher uma. Para substituir a imagem atual, simplesmente escolha outra. Use preferencialmente imagens nas proporções 1x1 (quadrado).">
                         <p:fileUpload fileUploadListener="#{managedProduto.handleFileUpload}"  
-                                      update=":panelUpload"
+                                      update="panelUpload"
                                       auto="true"
                                       label="Escolher imagem"
                                       multiple="false" 
                                       allowTypes="png,gif,jpg" />
                         <h:panelGroup rendered="#{not empty managedProduto.produto.imagem}" >
-                            <p:lightBox>
+                            <p:lightBox id="preimagem">
                                 <h:outputLink value="#{managedProduto.produto.imagem}" title="Imagem" >
                                     <p:graphicImage height="50px" title="Clique para ampliar."
                                                     value="#{managedProduto.produto.imagem}"/>
