--- a/Loja-WEB/web/paginas/listaProdutos.xhtml
+++ b/Loja-WEB/web/paginas/listaProdutos.xhtml
@@ -38,7 +38,7 @@
 
 
             <p:dataGrid id="tabelaProdutos" value="#{managedProduto.produtos}" var="produto" style="margin-top: 100px;"
-                        columns="3"  
+                        columns="3" paginatorAlwaysVisible="false"
                         rows="10" paginator="true" effect="true"  
                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
                         rowsPerPageTemplate="5,10,15,20,50"> 
